re-oragnize feature and add exports to facilitate testing

--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -26,7 +26,11 @@
       "types": "./dist/dts/index.d.ts",
       "default": "./dist/esm/index.js"
     },
-    "./custom-elements.json": "./dist/custom-elements.json"
+    "./custom-elements.json": "./dist/custom-elements.json",
+    "./design-token-2": {
+      "types": "./dist/dts/design-token-2/exports.d.ts",
+      "default": "./dist/esm/design-token-2/exports.js"
+    }
   },
   "scripts": {
     "clean:dist": "node ../../../build/clean.js dist",
