--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -118,6 +118,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@floating-ui/dom": "0.5.4",
     "@microsoft/fast-element": "^2.0.0-beta.3",
     "@microsoft/fast-web-utilities": "^6.0.0",
     "tabbable": "^5.2.0",
