--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -2,7 +2,7 @@
   "name": "@microsoft/fast-react-wrapper",
   "description": "A utility for wrapping web components for use in React.",
   "sideEffects": false,
-  "version": "1.0.0-alpha.4",
+  "version": "0.3.10",
   "author": {
     "name": "Microsoft",
     "url": "https://discord.gg/FcSNfg4"
@@ -82,8 +82,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.3",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.4"
+    "@microsoft/fast-element": "^1.10.3",
+    "@microsoft/fast-foundation": "^2.46.10"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
