--- a/sites/site-utilities/package.json
+++ b/sites/site-utilities/package.json
@@ -32,6 +32,6 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@microsoft/fast-foundation": "^3.0.0-alpha.4"
+    "@microsoft/fast-foundation": "^2.46.10"
   }
 }
