feat: move testing and di to fast-element (#6179)
* feat: move testing and di to fast-element

* fix: remove di method that only existed for old design system startup

* Change files

* chore: fix change files

Co-authored-by: EisenbergEffect <roeisenb@microsoft.com>

--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -65,6 +65,14 @@
     "./metadata": {
       "types": "./dist/dts/metadata.d.ts",
       "default": "./dist/esm/metadata.js"
+    },
+    "./testing": {
+      "types": "./dist/dts/testing/exports.d.ts",
+      "default": "./dist/esm/testing/exports.js"
+    },
+    "./di": {
+      "types": "./dist/dts/di/di.d.ts",
+      "default": "./dist/esm/di/di.js"
     }
   },
   "unpkg": "dist/fast-element.min.js",
