--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -82,8 +82,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.3",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.4"
+    "@microsoft/fast-element": "^2.0.0-beta.3"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
