--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -52,8 +52,7 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.3",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.4"
+    "@microsoft/fast-element": "^2.0.0-beta.3"
   },
   "devDependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.3",
