--- a/sites/fast-website/package.json
+++ b/sites/fast-website/package.json
@@ -6,20 +6,23 @@
   "types": "temp/index-rollup.d.ts",
   "private": true,
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@fluentui/svg-icons": "^1.1.139",
     "@microsoft/fast-components": "^2.30.6",
     "@microsoft/fast-element": "^1.0.0",
     "@microsoft/fast-foundation": "^2.0.0",
     "@microsoft/fast-web-utilities": "^6.0.0",
-    "@microsoft/site-utilities": "^0.9.0",
+    "@microsoft/site-utilities": "file:../site-utilities",
+    "lodash-es": "4.17.21",
+    "ts-loader": "^9.3.0"
+  },
+  "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "clean-webpack-plugin": "^4.0.0",
     "ejs-loader": "^0.5.0",
     "html-webpack-plugin": "^5.5.0",
-    "lodash-es": "4.17.21",
     "mini-css-extract-plugin": "^2.6.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "prettier": "2.0.2",
     "rollup": "^2.7.6",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -30,10 +33,10 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.0",
-    "webpack": "^5.72.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0",
+    "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
