add fast-website to workspace

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "sites/fast-color-explorer",
       "sites/site-utilities",
       "sites/website",
+      "sites/fast-website",
       "examples/todo-app",
       "examples/ssr"
     ],
