--- a/sites/fast-website/package.json
+++ b/sites/fast-website/package.json
@@ -8,11 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "@fluentui/svg-icons": "^1.1.139",
-    "@microsoft/fast-components": "^2.30.6",
-    "@microsoft/fast-element": "^1.0.0",
-    "@microsoft/fast-foundation": "^2.0.0",
+    "@microsoft/fast-components": "2.30.2",
     "@microsoft/fast-web-utilities": "^6.0.0",
-    "@microsoft/site-utilities": "file:../site-utilities",
+    "@microsoft/site-utilities": "0.9.0",
     "lodash-es": "4.17.21",
     "ts-loader": "^9.3.0"
   },
