add export for custom elements manifest

--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -25,7 +25,8 @@
     ".": {
       "types": "./dist/dts/index.d.ts",
       "default": "./dist/esm/index.js"
-    }
+    },
+    "./custom-elements": "./dist/custom-elements.json"
   },
   "scripts": {
     "clean:dist": "node ../../../build/clean.js dist",
