--- a/packages/utilities/fast-benchmarks/tsconfig.json
+++ b/packages/utilities/fast-benchmarks/tsconfig.json
@@ -11,7 +11,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Node16",
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
         "skipLibCheck": true
