--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@microsoft/fast-element": "2.0.0-beta.3",
+        "@microsoft/fast-foundation": "3.0.0-alpha-4",
         "tachometer": "^0.5.10"
     },
     "devDependencies": {
