--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/fast-element",
   "description": "A library for constructing Web Components",
-  "version": "2.0.0-beta.4",
+  "version": "1.10.4",
   "author": {
     "name": "Microsoft",
     "url": "https://discord.gg/FcSNfg4"
