--- a/packages/utilities/fast-benchmarks/.gitignore
+++ b/packages/utilities/fast-benchmarks/.gitignore
@@ -1,3 +1,9 @@
 tsconfig.tsbuildinfo
 node_modules
 dist
+tsconfig.*.tsbuildinfo
+tsconfig.*.json
+utils/*.d.ts
+utils/*.js
+benchmarks/**/*.d.ts
+benchmarks/**/*.js
