--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "benchmark": "node scripts/index.js",
         "benchmark:fast-element:render": "yarn run benchmark --library=fast-element --benchmark=render --versions=master --operations=update10th",
-        "benchmark:fast-element:observable": "yarn run benchmark --library=fast-element --benchmark=observable --versions local master --localBenchFile=index2 --operations=runFile",
+        "benchmark:fast-element:observable": "yarn run benchmark --library=fast-element --benchmark=observable --versions local master --localBenchFile=index2 --operations=runFile1k",
         "benchmark:fast-element:repeat": "yarn run benchmark --library=fast-element --benchmark=repeat --versions local master --templates basic basicNoRecycle --method=reverse --operations=clickTrigger10x",
         "benchmark:methods:append": "tach --config ./benchmarks/methods/append/tachometer.json",
         "help": "node ./scripts/index.js --help"
