feat: DesignToken refactor for FF3 (#6171)
* adding interfaces for new API structure

* adding tests for appendChild / removeChild

* add a stub implementation of DesignToken

* adding minimal design token interface

* save-progress

* adding notification logic

* re-organize notification propagation logic

* adding getTokenValue and tests

* add notification behavior to appndChild

* refactor to use string id

* rename method to retrieve all tokens for a node

* refactor to fix chai bug and issues uncovered when avoiding chai issue

* refactor a bit to centralize notifier for tokens on the token object itself

* adding new test for no notification when assigned the same value

* fixing test

* adding subscription test

* implement isAssigned

* progress on derived tokens

* implement mechanism to notify of static token changes

* make derived token assignments notify down the token tree

* adding and adapting test-cases from original DesignToken implementation

* re-organization of DesignTokenNode

* adding observable map to notify for derived values

* naieve implementation of reflecting upstream derived tokens

* re-oragnize feature and add exports to facilitate testing

* implement circular reference resolution and made a few perf changes

* adding another circular reference test

* adding deleteTokenValue API and privatizing isDerivedFor

* adding subscription tests

* update test names

* further test clean up

* more tests and slight performance improvement

* method organization

* remove observableMap implementation to provide better control over token notification, adds a few tests

* implement more specific notification behavior

* fixing test so it passes w/ new notification behavior

* adding test package

* adds behavior to handle observable value updates

* adding additional observable tests

* refactor token notification to contain mutation type data

* refactor notificat

--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -27,6 +27,10 @@
       "default": "./dist/esm/index.js"
     },
     "./custom-elements.json": "./dist/custom-elements.json",
+    "./design-token-core": {
+      "types": "./dist/dts/design-token/core/exports.d.ts",
+      "default": "./dist/esm/design-token/core/exports.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
