--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "scripts": {
         "benchmark": "node scripts/index.js",
+        "benchmark:fast-element:default-attr-assignment": "yarn run benchmark --library=fast-element --benchmark=default-attr-assignment --versions local master --templates basic basicNoRecycle --operations=create10k",
         "benchmark:fast-element:render": "yarn run benchmark --library=fast-element --benchmark=render --versions=master --operations=update10th",
         "benchmark:fast-element:observable": "yarn run benchmark --library=fast-element --benchmark=observable --versions local master --localBenchFile=index2 --operations=runFile1k",
         "benchmark:fast-element:repeat": "yarn run benchmark --library=fast-element --benchmark=repeat --versions local master --templates basic basicNoRecycle --method=reverse --operations=clickTrigger10x",
