--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -11,10 +11,12 @@
     "license": "MIT",
     "scripts": {
         "benchmark": "node scripts/index.js",
-        "benchmark:fast-element:render": "yarn run benchmark --library=fast-element --benchmark=render --versions=master --operations=update10th",
+        "benchmark:fast-element:render": "yarn run benchmark --library=fast-element --benchmark=render --versions local master --operations=update10th",
         "benchmark:fast-element:observable": "yarn run benchmark --library=fast-element --benchmark=observable --versions local master --localBenchFile=index2 --operations=runFile1k",
-        "benchmark:fast-element:when": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --operations=clickTrigger10x",
-        "benchmark:fast-element:repeat": "yarn run benchmark --library=fast-element --benchmark=repeat --versions local master --templates basic basicNoRecycle --method=reverse --operations=clickTrigger10x",
+        "benchmark:fast-element:when:basic": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=basic --operations=create10k",
+        "benchmark:fast-element:when:conditional": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=conditional --operations=clickTrigger10x",
+        "benchmark:fast-element:when:example": "yarn run benchmark --library=fast-element --benchmark=whenExample --versions local master --localBenchFile=index2 --branchName=master --operations=clickTrigger10x",
+        "benchmark:fast-element:repeat": "yarn run benchmark --library=fast-element --benchmark=repeat --versions local master --templates=basic --method=reverse --operations=clickTrigger10x",
         "benchmark:methods:append": "tach --config ./benchmarks/methods/append/tachometer.json",
         "help": "node ./scripts/index.js --help"
     },
