--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -15,7 +15,7 @@
         "benchmark:fast-element:observable": "yarn run benchmark --library=fast-element --benchmark=observable --versions local master --localBenchFile=index2 --operations=runFile1k",
         "benchmark:fast-element:when:basic": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=basic --operations=create10k",
         "benchmark:fast-element:when:conditional": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=conditional --operations=clickTrigger10x",
-        "benchmark:fast-element:when:switch": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=conditional --operations=clickTrigger10x",
+        "benchmark:fast-element:when:switch": "yarn run benchmark --library=fast-element --benchmark=when --versions local master --localBenchFile=index2 --branchName=master --templates=switch --operations=clickTrigger10x",
         "benchmark:fast-element:repeat": "yarn run benchmark --library=fast-element --benchmark=repeat --versions local master --templates=basic --method=reverse --operations=clickTrigger10x",
         "benchmark:methods:append": "tach --config ./benchmarks/methods/append/tachometer.json",
         "help": "node ./scripts/index.js --help"
