--- a/packages/web-components/fast-foundation/tsconfig.json
+++ b/packages/web-components/fast-foundation/tsconfig.json
@@ -13,7 +13,7 @@
         "moduleResolution": "Node16",
         "importHelpers": true,
         "types": ["mocha", "webpack-env"],
-        "lib": ["DOM", "ES2015", "ES2016.Array.Include"]
+        "lib": ["DOM", "ES2015", "ES2016.Array.Include", "ES2017.Object"]
     },
     "include": ["src"]
 }
