add playwright and remove karma from fast-foundation

--- a/packages/web-components/fast-foundation/.eslintrc.json
+++ b/packages/web-components/fast-foundation/.eslintrc.json
@@ -30,7 +30,7 @@
                 "no-restricted-imports": [
                     "error",
                     {
-                        "patterns": ["**/stories/**"]
+                        "patterns": ["**/stories/**", "**/*.pw.spec.ts"]
                     }
                 ]
             }
