--- a/packages/web-components/fast-foundation/tsconfig.build.json
+++ b/packages/web-components/fast-foundation/tsconfig.build.json
@@ -1,8 +1,4 @@
 {
     "extends": "./tsconfig.json",
-    "compilerOptions": {
-        "baseUrl": "",
-        "moduleResolution": "Node16",
-    },
-    "exclude": ["**/stories/**"]
+    "exclude": ["**/stories/**", "**/*.spec.ts"]
 }
