--- a/packages/web-components/fast-foundation/.eslintignore
+++ b/packages/web-components/fast-foundation/.eslintignore
@@ -1,10 +1,5 @@
-# don't ever lint node_modules
-node_modules
-# don't lint build output (make sure it's set to your correct build folder name)
-dist
-# don't lint coverage output
 coverage
-# don't lint tests
-*.spec.*
-#
-karma.conf.cjs
+dist
+node_modules
+*.spec.ts
+!*.pw.spec.ts
