--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -54,18 +54,11 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "yarn eslint && yarn test-chrome:verbose && yarn doc:ci",
-    "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
-    "test-chrome:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
-    "test-chrome:verbose:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha",
-    "test-firefox:watch": "karma start karma.conf.cjs --browsers=FirefoxHeadless   --coverage --watch-extensions js",
+    "pretest": "yarn eslint",
+    "test": "playwright test",
+    "pretest:ci": "yarn build-storybook",
+    "test:ci": "yarn test",
+    "posttest:ci": "yarn doc:ci",
     "start": "yarn start:storybook",
     "start:storybook": "start-storybook -p 6006"
   },
@@ -74,50 +67,32 @@
     "@custom-elements-manifest/to-markdown": "^0.1.0",
     "@microsoft/api-extractor": "7.24.2",
     "@microsoft/tsdoc-config": "^0.13.4",
+    "@playwright/test": "^1.25.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-docs": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
     "@storybook/addon-links": "6.5.9",
     "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/csf": "0.0.2--canary.0899bb7.0",
     "@storybook/html": "6.5.9",
     "@storybook/manager-webpack5": "6.5.9",
-    "@types/chai": "^4.2.11",
-    "@types/karma": "^5.0.0",
-    "@types/mocha": "^7.0.2",
-    "@types/webpack-env": "^1.15.2",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
+    "concurrently": "^7.3.0",
     "esm": "^3.2.25",
-    "ignore-loader": "^0.1.2",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "3.0.2",
-    "karma": "^5.0.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
-    "karma-firefox-launcher": "^2.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^7.1.2",
+    "express": "^4.18.1",
     "prettier": "2.0.2",
-    "rollup": "^2.71.1",
+    "qs": "^6.11.0",
+    "resolve-typescript-plugin": "^1.2.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
-    "@rollup/plugin-node-resolve": "^13.3.0",
     "rollup-plugin-transform-tagged-template": "^0.0.3",
-    "source-map": "^0.7.3",
+    "rollup": "^2.71.1",
     "source-map-loader": "^0.2.4",
+    "source-map": "^0.7.3",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
-    "resolve-typescript-plugin": "^1.2.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.7.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.6",
