--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "bump": "beachball bump",
     "change": "beachball change",
-    "checkchange": "beachball check  --scope \"!sites/*\" --changehint \"Run 'yarn change' to generate a change file\"",
+    "checkchange": "beachball check --branch origin/archives/fast-element-1 --scope \"!sites/*\" --changehint \"Run 'yarn change' to generate a change file\"",
     "check": "beachball check ",
     "publish": "beachball publish",
     "publish-ci": "beachball publish -y --access public -b origin/archives/fast-element-1",
