--- a/packages/tooling/fast-vscode-syntax-highlighting/package.json
+++ b/packages/tooling/fast-vscode-syntax-highlighting/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fast-tagged-templates",
+  "publisher": "ms-fast",
   "displayName": "FAST Tagged Template Literals",
   "description": "Syntax highlighting support for CSS and HTML tagged template literals",
   "author": {
