add fast-tagged-templates extension to recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "bierner.jsdoc-markdown-highlighting",
     "dbaeumer.vscode-eslint",
     "ghmcadams.lintlens",
+    "ms-fast.fast-tagged-templates",
     "rvest.vs-code-prettier-eslint",
     "sidneys1.gitconfig"
   ]
