--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.4",
+    "@microsoft/fast-foundation": "^3.0.0-alpha.9",
     "@microsoft/fast-ssr": "^1.0.0-beta.6",
     "clean-webpack-plugin": "^4.0.0",
     "express": "^4.18.1",
