update main paths so that dist gets included in the bundle

--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -34,8 +34,8 @@
     "install-playwright-browsers": "yarn playwright install"
   },
   "description": "A package for rendering FAST Web Components outside the browser.",
-  "main": "./dist/esm/exports.js",
-  "types": "./dist/dts/exports.d.ts",
+  "main": "dist/esm/exports.js",
+  "types": "dist/dts/exports.d.ts",
   "exports": {
     ".": {
       "types": "./dist/dts/exports.d.ts",
