adding export path so that RequestStorage can be imported without requiring fast-element configuration

--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -46,6 +46,10 @@
       "types": "./dist/dts/dom-shim.d.ts",
       "default": "./dist/esm/dom-shim.js"
     },
+    "./request-storage": {
+      "types": "./dist/dts/request-storage.d.ts",
+      "default": "./dist/esm/request-storage.js"
+    },
     "./package.json": "./package.json"
   },
   "dependencies": {
