update webpack build to be development mode to facilitate debugging

--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack",
     "watch": "tsc -p tsconfig.json --watch",
     "start": "yarn build && node server.js",
     "test": "yarn build"
