--- a/examples/design-system-tutorial/package.json
+++ b/examples/design-system-tutorial/package.json
@@ -15,12 +15,12 @@
     "@microsoft/fast-element": "^2.0.0-beta.1",
     "@microsoft/fast-foundation": "^3.0.0-alpha.2",
     "@microsoft/fast-components": "^2.30.6",
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
     "ts-loader": "^7.0.1",
-    "typescript": "^4.7.0",
+    "typescript": "~4.8.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
