--- a/examples/svelte-starters/svelte-fast-typescript-starter/package.json
+++ b/examples/svelte-starters/svelte-fast-typescript-starter/package.json
@@ -15,8 +15,8 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
+    "tslib": "^2.6.0",
+    "typescript": "~4.8.0",
     "vite": "^2.9.9"
   },
   "dependencies": {
