--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -25,13 +25,13 @@
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.4",
     "@microsoft/fast-foundation": "^3.0.0-alpha.9",
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.3",
+    "typescript": "~4.8.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2"
