--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "node-gyp": "^9.0.0",
     "trim-newlines": "^4.0.2",
     "trim": "^0.0.3",
-    "typescript": "^4.7.0",
+    "typescript": "~4.8.0",
     "ua-parser-js": "^0.7.28",
     "xmlhttprequest-ssl": "^1.6.2"
   },
@@ -113,7 +113,7 @@
     "prettier": "2.8.8",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
-    "typescript": "^4.7.0",
+    "typescript": "~4.8.0",
     "yargs": "^16.2.0"
   }
 }
