--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -29,6 +29,6 @@
     "chalk": "^5.0.1",
     "commander": "^9.2.0",
     "cross-spawn": "^7.0.3",
-    "typescript": "^4.7.2"
+    "typescript": "~4.8.0"
   }
 }
