--- a/packages/utilities/fast-colors/package.json
+++ b/packages/utilities/fast-colors/package.json
@@ -44,6 +44,6 @@
     "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.8",
-    "typescript": "^4.7.0"
+    "typescript": "~4.8.0"
   }
 }
