--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -46,7 +46,7 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.24.2",
+    "@microsoft/api-extractor": "7.32.0",
     "@types/chai": "^4.2.11",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
@@ -78,7 +78,7 @@
     "ts-loader": "^9.3.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.7.0",
+    "typescript": "~4.8.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
