--- a/sites/fast-website/package.json
+++ b/sites/fast-website/package.json
@@ -33,7 +33,7 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.3",
+    "typescript": "~4.8.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2",
