--- a/examples/design-system-tutorial/tsconfig.json
+++ b/examples/design-system-tutorial/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "pretty": true,
-    "target": "ES2015",
-    "module": "ES2015",
+    "target": "ES2019",
+    "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "experimentalDecorators": true,
