--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "engines": {
     "yarn": ">=1.13 <2",
-    "node": ">15.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
@@ -69,6 +69,7 @@
     "@microsoft/fast-tooling": "^0.37.7",
     "@types/karma": "^6.3.3",
     "@types/react": "^16.14.0",
+    "@types/node": "^20.5.3",
     "browserslist": "^4.16.5",
     "clean-css": "^4.2.3",
     "css-select": "^4.2.1",
@@ -88,7 +89,7 @@
     "node-gyp": "^9.0.0",
     "trim-newlines": "^4.0.2",
     "trim": "^0.0.3",
-    "typescript": "~4.9.0",
+    "typescript": "~5.1.0",
     "ua-parser-js": "^0.7.28",
     "xmlhttprequest-ssl": "^1.6.2"
   },
@@ -113,7 +114,7 @@
     "prettier": "2.8.8",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
-    "typescript": "~4.9.0",
+    "typescript": "~5.1.0",
     "yargs": "^16.2.0"
   }
 }
