--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -117,7 +117,7 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.32.0",
+    "@microsoft/api-extractor": "~7.36.0",
     "@types/chai": "^4.2.11",
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.3",
@@ -153,7 +153,7 @@
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.6.0",
-    "typescript": "~4.9.0",
+    "typescript": "~5.1.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
