--- a/packages/web-components/fast-element/tsconfig.json
+++ b/packages/web-components/fast-element/tsconfig.json
@@ -8,9 +8,9 @@
         "emitDecoratorMetadata": true,
         "noImplicitAny": false,
         "strictPropertyInitialization": false,
-        "target": "es2015",
+        "target": "ES2019",
         "module": "ESNext",
-        "moduleResolution": "Node16",
+        "moduleResolution": "NodeNext",
         "types": [
             "mocha",
             "webpack-env"
