--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -62,12 +62,12 @@
   "devDependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26",
     "@microsoft/fast-foundation": "^3.0.0-alpha.31",
-    "@microsoft/api-extractor": "7.32.0",
+    "@microsoft/api-extractor": "~7.36.0",
     "@playwright/test": "^1.25.2",
     "@types/express": "^4.17.13",
     "@types/node": "^20.5.3",
     "chokidar-cli": "^3.0.0",
     "express": "^4.17.1",
-    "typescript": "~4.8.0"
+    "typescript": "~4.9.0"
   }
 }
