--- a/packages/web-components/fast-ssr/tsconfig.json
+++ b/packages/web-components/fast-ssr/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "target": "ES2015",
-    "module": "ES2015",
-    "moduleResolution": "Node16",
+    "target": "ES2019",
+    "module": "esnext",
+    "moduleResolution": "NodeNext",
     "importHelpers": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
