initial update to use web-test-runner

--- a/packages/web-components/fast-element/tsconfig.json
+++ b/packages/web-components/fast-element/tsconfig.json
@@ -12,8 +12,8 @@
         "module": "ESNext",
         "moduleResolution": "Node16",
         "types": [
+            "chai-spies",
             "mocha",
-            "webpack-env"
         ],
         "lib": [
             "DOM",
