--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -104,57 +104,26 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "yarn eslint && yarn test-chrome:verbose && yarn doc:ci",
-    "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
-    "test-chrome:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
-    "test-chrome:verbose:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
+    "test": "yarn eslint && yarn build:tsc && web-test-runner && yarn doc:ci"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "4.3.4-fix.0",
     "@microsoft/api-extractor": "7.24.2",
-    "@types/chai": "^4.2.11",
-    "@types/chai-spies": "^1.0.3",
-    "@types/karma": "^6.3.3",
-    "@types/mocha": "^7.0.2",
-    "@types/webpack-env": "^1.15.2",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
+    "@web/dev-server-import-maps": "0.1.1",
+    "@web/test-runner": "0.17.0",
+    "@web/test-runner-playwright": "0.10.1",
+    "@types/chai-spies": "1.0.3",
+    "@types/mocha": "10.0.1",
+    "chai-spies": "1.0.0",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "3.0.2",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
-    "karma-firefox-launcher": "^2.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^7.1.2",
+    "mocha": "10.2.0",
     "prettier": "2.8.8",
     "rollup": "^2.71.1",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "@rollup/plugin-typescript": "^8.3.2",
-    "source-map": "^0.7.3",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.2",
-    "ts-node": "^8.9.1",
-    "tsconfig-paths": "^3.9.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.7.0"
   }
 }
