--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -44,7 +44,7 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.23.1",
+    "@microsoft/api-extractor": "7.37.2",
     "@types/chai": "^4.2.11",
     "@types/karma": "^5.0.0",
     "@types/mocha": "^7.0.2",
@@ -77,10 +77,10 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "source-map": "^0.7.3",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.2",
-    "ts-node": "^8.9.1",
+    "ts-loader": "~9.4.0",
+    "ts-node": "~10.9.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.6.2",
+    "typescript": "~4.8.0",
     "webpack": "^4.44.0"
   },
   "dependencies": {
