--- a/examples/todo-app-tutorial/package.json
+++ b/examples/todo-app-tutorial/package.json
@@ -20,8 +20,8 @@
   "devDependencies": {
     "http-server": "^14.1.0",
     "rimraf": "^3.0.2",
-    "ts-loader": "^7.0.1",
-    "typescript": "^4.6.2",
+    "ts-loader": "~9.4.0",
+    "typescript": "~4.8.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
