--- a/packages/utilities/fast-benchmarks/package.json
+++ b/packages/utilities/fast-benchmarks/package.json
@@ -22,14 +22,14 @@
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.0",
-    "@types/node": "^15.0.1",
+    "@types/node": "~20.7.0",
     "benchmark": "^2.1.4",
     "chalk": "^2.4.2",
     "commander": "^7.2.0",
     "html-webpack-plugin": "^5.3.1",
     "prettier": "2.0.2",
-    "ts-loader": "^8.1.0",
-    "typescript": "^4.6.2",
+    "ts-loader": "~9.4.0",
+    "typescript": "~4.8.0",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.0.0-beta.1"
