--- a/packages/utilities/fast-colors/package.json
+++ b/packages/utilities/fast-colors/package.json
@@ -42,6 +42,6 @@
     "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "eslint-config-prettier": "^6.10.1",
     "prettier": "2.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "~4.8.0"
   }
 }
