--- a/sites/fast-color-explorer/package.json
+++ b/sites/fast-color-explorer/package.json
@@ -30,7 +30,7 @@
     "@babel/preset-env": "^7.12.13",
     "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "@microsoft/site-utilities": "^0.9.0",
-    "@types/node": "^15.0.1",
+    "@types/node": "~20.7.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
@@ -44,8 +44,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "2.0.2",
     "svg-inline-loader": "^0.8.2",
-    "ts-loader": "^5.3.1",
-    "typescript": "^4.6.2",
+    "ts-loader": "~9.4.0",
+    "typescript": "~4.8.0",
     "webpack": "^4.44.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
