--- a/sites/fast-website/package.json
+++ b/sites/fast-website/package.json
@@ -32,8 +32,8 @@
     "rollup-plugin-typescript2": "^0.27.1",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^3.0.1",
-    "ts-loader": "^7.0.2",
-    "typescript": "^4.6.2",
+    "ts-loader": "~9.4.0",
+    "typescript": "~4.8.0",
     "webpack": "^4.44.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
