--- a/sites/site-utilities/package.json
+++ b/sites/site-utilities/package.json
@@ -34,7 +34,7 @@
     "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^15.0.1",
+    "@types/node": "~20.7.0",
     "@types/react": "^16.8.0",
     "babel-loader": "^8.2.2",
     "badge-maker": "^3.2.0",
@@ -51,7 +51,7 @@
     "raf-throttle": "^2.0.3",
     "react": "^16.8.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.2",
+    "typescript": "~4.8.0",
     "vscode-web-custom-data": "^0.3.1"
   },
   "dependencies": {
