update web utilities

--- a/packages/utilities/fast-web-utilities/tsconfig.json
+++ b/packages/utilities/fast-web-utilities/tsconfig.json
@@ -6,6 +6,6 @@
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "allowJs": true,
-        "types": ["mocha", "webpack-env", "node"]
+        "types": ["mocha", "sinon", "webpack-env", "node"]
     }
 }
